tests/baselines/reference/alwaysStrictNoImplicitUseStrict.errors.txt
error TS5053: Option 'noImplicitUseStrict' cannot be specified with option 'alwaysStrict'.
tests/cases/compiler/alwaysStrictNoImplicitUseStrict.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5053: Option 'noImplicitUseStrict' cannot be specified with option 'alwaysStrict'.
==== tests/cases/compiler/alwaysStrictNoImplicitUseStrict.ts (1 errors) ====
    module M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }